--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+h1 {
+  color: darken($color: blue, $amount: 20%);
+}
